showcase-collection, cta, single-img-banner, icon-item section added

--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
 		<link rel="stylesheet" href="./assets/css/card.css">
 		<link rel="stylesheet" href="./assets/css/cart.css">
 		<link rel="stylesheet" href="./assets/css/icon-item.css">
-		<link rel="stylesheet" href="./assets/css/video.css">
-		<link rel="stylesheet" href="./assets/css/blog.css">
-		<link rel="stylesheet" href="./assets/css/brand-slider.css">
-		<link rel="stylesheet" href="./assets/css/marque-slider.css">
+		<link rel="stylesheet" href="./assets/css/single-banner-section.css">
 		<link rel="stylesheet" href="./assets/css/cta.css">
+		<link rel="stylesheet" href="./assets/css/showcase-collection-section.css">
 		<link rel="stylesheet" href="./assets/css/category.css">
 		<link rel="stylesheet" href="./assets/css/hero-section.css">
 		<link rel="stylesheet" href="./assets/css/main.css">
@@ -201,7 +199,7 @@
 			<section class="section category-section">
 				<div class="container">
 					<div class="section-heading-wrapper">
-						<h2 class="section-heading">DISCOVER OUR COLLECTIONS</h2>
+						<h2 class="section-heading">disover our collection</h2>
 					</div>
 					<div class="category-items">
 						<div class="category-item">
@@ -245,181 +243,134 @@
 			</section>
 			<!-- category section end -->
 
-			<!-- cta section start -->
-			<!-- <section class="cta-section">
-				<div class="container">
-					<div class="cta-content-wrap">
-						<div class="cta-content">
-							<h3 class="cta-content-title">diagram life style</h3>
-							<div class="cta-content-btn">
-								<a href="#" class="btn primary-btn">discover more <span></span></a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section> -->
-			<!-- cta section end -->
-
-			<!-- video section start -->
-			<!-- <section class="video-section">
-				<div class="video-wrapper">
-					<div class="video-area">
-						<video muted autoplay loop>
-							<source src="./assets/videos/diagram-video.mp4" type="video/mp4">
-						</video>
-					</div>
-					<div class="video-content-area">
-						<div class="video-content">
-							<h2 class="video-content-title">Diagram's Exclusive Hoodie</h2>
-							<p class="video-content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-								Maiores, rem. Lorem
-								ipsum dolor sit amet consectetur, adipisicing elit.</p>
-							<div class="video-content-btn">
-								<a href="#" class="btn secondary-btn">discover more <span></span></a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section> -->
-			<!-- video section end -->
-
-			<!-- brand section start -->
-			<!-- <section class="brand-section">
+			<!-- showcase-collection section start -->
+			<section class="section showcase-collection">
 				<div class="container">
 					<div class="section-heading-wrapper">
-						<h2 class="section-heading">As seen in</h2>
+						<h2 class="section-heading">Our products</h2>
 					</div>
-				</div>
-				<!-- marque slider start -->
-				<!-- <div class="marquee-slider marquee--hover-pause">
-					<ul class="marquee__content">
-						<li class="marquee-content-item">
-							<div class="marquee-content-item-img">
-								<img src="./assets/images/brand-slider-logo1.png" alt="brand-slider-logo1.png">
+					<div class="showcase-collection-items">
+						<div class="showcase-collection-item">
+							<div class="product-card card_hover">
+								<div class="card-image-wrap">
+									<div class="card-img">
+										<a class="main-img" href="#">
+											<img class="card_img" src="./assets/images/collection-img1.jpg" alt="collection-img1.jpg">
+										</a>
+										<a class="hover-img" href="#">
+											<img class="card_hover_img" src="./assets/images/collection-img2.jpg" alt="collection-img2.jpg">
+										</a>
+									</div>
+									<span class="card-badge">
+										New
+									</span>
+									<div class="card-btn">
+										<a href="#" class="btn primary-btn"><i class="fa-solid fa-bag-shopping"></i> add to
+											bag<span></span></a>
+									</div>
+								</div>
+								<div class="card-content">
+									<a href="#" class="card-title">POTISSE LOVE KISS POTISSE 50430 CHALK WHITE T-SHIRT</a>
+									<div class="card-price-wrap">
+										<p class="latest-price"><strong>€29</strong></p>
+										<p class="previous-price">€39</p>
+									</div>
+								</div>
 							</div>
-						</li>
-						<li class="marquee-content-item">
-							<div class="marquee-content-item-img">
-								<img src="./assets/images/brand-slider-logo2.png" alt="brand-slider-logo2.png">
+						</div>
+						<div class="showcase-collection-item">
+							<div class="product-card card_hover">
+								<div class="card-image-wrap">
+									<div class="card-img">
+										<a class="main-img" href="#">
+											<img class="card_img" src="./assets/images/collection-img2.jpg" alt="collection-img2.jpg">
+										</a>
+										<a class="hover-img" href="#">
+											<img class="card_hover_img" src="./assets/images/collection-img3.jpg" alt="collection-img3.jpg">
+										</a>
+									</div>
+									<div class="card-btn">
+										<a href="#" class="btn primary-btn"><i class="fa-solid fa-bag-shopping"></i> add to
+											bag<span></span></a>
+									</div>
+								</div>
+								<div class="card-content">
+									<a href="#" class="card-title">POTISSE GEOMETRIC & GRAFFITI WHITE T-SHIRT</a>
+									<div class="card-price-wrap">
+										<p class="latest-price"><strong>€99</strong></p>
+										<p class="previous-price">€199</p>
+									</div>
+								</div>
 							</div>
-						</li>
-						<li class="marquee-content-item">
-							<div class="marquee-content-item-img">
-								<img src="./assets/images/brand-slider-logo3.png" alt="brand-slider-logo3.png">
-							</div>
-						</li>
-						<li class="marquee-content-item">
-							<div class="marquee-content-item-img">
-								<img src="./assets/images/brand-slider-logo4.png" alt="brand-slider-logo4.png">
-							</div>
-						</li>
-						<li class="marquee-content-item">
-							<div class="marquee-content-item-img">
-								<img src="./assets/images/brand-slider-logo5.png" alt="brand-slider-logo5.png">
-							</div>
-						</li>
-						<li class="marquee-content-item">
-							<div class="marquee-content-item-img">
-								<img src="./assets/images/brand-slider-logo6.png" alt="brand-slider-logo6.png">
-							</div>
-						</li>
-					</ul>
-					<ul class="marquee__content">
-						<li class="marquee-content-item">
-							<div class="marquee-content-item-img">
-								<img src="./assets/images/brand-slider-logo1.png" alt="brand-slider-logo1.png">
-							</div>
-						</li>
-						<li class="marquee-content-item">
-							<div class="marquee-content-item-img">
-								<img src="./assets/images/brand-slider-logo2.png" alt="brand-slider-logo2.png">
-							</div>
-						</li>
-						<li class="marquee-content-item">
-							<div class="marquee-content-item-img">
-								<img src="./assets/images/brand-slider-logo3.png" alt="brand-slider-logo3.png">
-							</div>
-						</li>
-						<li class="marquee-content-item">
-							<div class="marquee-content-item-img">
-								<img src="./assets/images/brand-slider-logo4.png" alt="brand-slider-logo4.png">
-							</div>
-						</li>
-						<li class="marquee-content-item">
-							<div class="marquee-content-item-img">
-								<img src="./assets/images/brand-slider-logo5.png" alt="brand-slider-logo5.png">
-							</div>
-						</li>
-						<li class="marquee-content-item">
-							<div class="marquee-content-item-img">
-								<img src="./assets/images/brand-slider-logo6.png" alt="brand-slider-logo6.png">
-							</div>
-						</li>
-					</ul>
-				</div> -->
-				<!-- marque slider end -->
-			<!-- </section> --> -->
-			<!-- brand section end -->
+						</div>
 
-			<!-- blog section start -->
-			<!-- <section class="section blog-section">
-				<div class="container">
-					<div class="section-heading-wrapper">
-						<h2 class="section-heading">From the Journal</h2>
-					</div>
-					<div class="blog-items">
-						<div class="blog-item">
-							<div class="blog-img">
-								<a href="#">
-									<img src="./assets/images/blog-img1.jpg" alt="blog-img1.jpg">
-								</a>
-							</div>
-							<div class="blog-content">
-								<p class="blog-date">Feb 10, 2025</p>
-								<a href="#" class="blog-content-title">Win a fashion focused holiday</a>
-								<p class="blog-content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									Laborum est id
-									tempora pariatur ullam non at sunt atque quo nostrum?</p>
-							</div>
-						</div>
-						<div class="blog-item">
-							<div class="blog-img">
-								<a href="#">
-									<img src="./assets/images/blog-img2.jpg" alt="blog-img2.jpg">
-								</a>
-							</div>
-							<div class="blog-content">
-								<p class="blog-date">Feb 10, 2025</p>
-								<a href="#" class="blog-content-title">Win a fashion focused holiday</a>
-								<p class="blog-content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									Laborum est id
-									tempora pariatur ullam non at sunt atque quo nostrum?</p>
-							</div>
-						</div>
-						<div class="blog-item">
-							<div class="blog-img">
-								<a href="#">
-									<img src="./assets/images/blog-img3.jpg" alt="blog-img3.jpg">
-								</a>
-							</div>
-							<div class="blog-content">
-								<p class="blog-date">Feb 10, 2025</p>
-								<a href="#" class="blog-content-title">Win a fashion focused holiday</a>
-								<p class="blog-content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									Laborum est id
-									tempora pariatur ullam non at sunt atque quo nostrum?</p>
+
+						<div class="showcase-collection-item">
+							<div class="product-card card_hover">
+								<div class="card-image-wrap">
+									<div class="card-img">
+										<a class="main-img" href="#">
+											<img class="card_img" src="./assets/images/collection-img3.jpg" alt="collection-img3.jpg">
+										</a>
+										<a class="hover-img" href="#">
+											<img class="card_hover_img" src="./assets/images/collection-img1.jpg" alt="collection-img1.jpg">
+										</a>
+									</div>
+									<span class="card-badge">
+										New
+									</span>
+									<div class="card-btn">
+										<a href="#" class="btn primary-btn"><i class="fa-solid fa-bag-shopping"></i> add to
+											bag<span></span></a>
+									</div>
+								</div>
+								<div class="card-content">
+									<a href="#" class="card-title">POTISSE LOVE KISS POTISSE 50430 CHALK WHITE T-SHIRT</a>
+									<div class="card-price-wrap">
+										<p class="latest-price"><strong>€29</strong></p>
+										<p class="previous-price">€49</p>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
 					<div class="section-btn">
-						<a href="#" class="btn primary-btn">view more <span></span></a>
+						<a href="#" class="btn primary-btn">view all <span></span></a>
 					</div>
 				</div>
-			</section> -->
-			<!-- blo section end -->
+			</section>
+			<!-- showcase-collection section end -->
+
+			<!-- cta section start -->
+			<section class="section cta-section">
+				<div class="container">
+					<div class="cta-content-wrap">
+						<div class="cta-content">
+							<h4 class="cta-content-title">JOIN OUR POTISSE MEMBER’S COMMUNITY
+							</h4>
+							<p class="cta-content-text">
+								Sign up to stay updated on new products, trends, and special announcements.
+							</p>
+							<div class="cta-input-field-wrap">
+								<div class="cta-input-field">
+									<input type="email" placeholder="E-mail">
+								</div>
+								<a href="#" class="btn primary-btn">SUBSCRIBE <span></span></a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- cta section end -->
+
+			<!-- sngle-banner section start -->
+			<section class="single-banner-section">
+
+			</section>
+			<!-- sngle-banner section end -->
 
 			<!-- icon-item-section start -->
-			<!-- <section class="icon-item-section">
+			<section class="icon-item-section">
 				<div class="container">
 					<div class="icon-items">
 						<div class="icon-item">
@@ -427,7 +378,7 @@
 								<img src="./assets/images/free-shipping.png" alt="free-shipping.png">
 							</div>
 							<div class="icon-item-content">
-								<h6 class="icon-item-title">FREE SHIPPING</h6>
+								<h6 class="icon-item-title">free shipping</h6>
 								<p class="icon-item-text">Shop your favorite styles with ease—no
 									added costs at checkout.</p>
 							</div>
@@ -437,7 +388,7 @@
 								<img src="./assets/images/Wallet.png" alt="Wallet.png">
 							</div>
 							<div class="icon-item-content">
-								<h6 class="icon-item-title">AFFORDABLE LUXURY</h6>
+								<h6 class="icon-item-title">affordable luxury</h6>
 								<p class="icon-item-text">Experience the elegance of high-quality fashion without the high price tag.
 								</p>
 							</div>
@@ -447,14 +398,14 @@
 								<img src="./assets/images/return.png" alt="return.png">
 							</div>
 							<div class="icon-item-content">
-								<h6 class="icon-item-title">EASY RETURNS</h6>
+								<h6 class="icon-item-title">easy returns</h6>
 								<p class="icon-item-text">We want you to love what you wear,
 									and your satisfaction is our priority.</p>
 							</div>
 						</div>
 					</div>
 				</div>
-			</section> -->
+			</section>
 			<!-- icon-item-section end -->
 
 			<!-- cart-sidebar start -->
