footer-section, side-cart section added, home page responsive, collection page added

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 										<a href="index.html">Home</a>
 									</li>
 									<li>
-										<a href="#">Collections</a>
+										<a href="collections.html">Collections</a>
 									</li>
 									<li>
 										<a href="#">Product</a>
@@ -303,8 +303,6 @@
 								</div>
 							</div>
 						</div>
-
-
 						<div class="showcase-collection-item">
 							<div class="product-card card_hover">
 								<div class="card-image-wrap">
@@ -365,7 +363,6 @@
 
 			<!-- sngle-banner section start -->
 			<section class="single-banner-section">
-
 			</section>
 			<!-- sngle-banner section end -->
 
@@ -409,7 +406,7 @@
 			<!-- icon-item-section end -->
 
 			<!-- cart-sidebar start -->
-			<!-- <div class="cart-sidebar">
+			<div class="cart-sidebar">
 				<button class="cart-sidebar-close-window-btn"></button>
 				<div class="cart-sidebar-box active">
 					<div class="side-cart-top">
@@ -440,11 +437,11 @@
 												<div class="card-image-wrap">
 													<div class="card-img">
 														<a class="main-img" href="#">
-															<img class="card_img" src="./assets/images/category-img6.jpg" alt="category-img6.jpg">
+															<img class="card_img" src="./assets/images/collection-img1.jpg" alt="collection-img1.jpg">
 														</a>
 														<a class="hover-img" href="#">
-															<img class="card_hover_img" src="./assets/images/category-img5.jpg"
-																alt="category-img5.jpg">
+															<img class="card_hover_img" src="./assets/images/collection-img2.jpg"
+																alt="collection-img2.jpg">
 														</a>
 													</div>
 													<span class="card-badge">
@@ -456,10 +453,10 @@
 													</div>
 												</div>
 												<div class="card-content">
-													<a href="#" class="card-title">Diagram's Premium Hoodie | Snow Drift (DH-05)</a>
+													<a href="#" class="card-title">POTISSE LOVE KISS POTISSE 50430 CHALK WHITE T-SHIRT</a>
 													<div class="card-price-wrap">
-														<p class="latest-price"><strong>1199 BDT</strong></p>
-														<p class="previous-price">1400 BDT</p>
+														<p class="latest-price"><strong>€29</strong></p>
+														<p class="previous-price">€39</p>
 													</div>
 												</div>
 											</div>
@@ -471,11 +468,11 @@
 												<div class="card-image-wrap">
 													<div class="card-img">
 														<a class="main-img" href="#">
-															<img class="card_img" src="./assets/images/category-img1.jpg" alt="category-img1.jpg">
+															<img class="card_img" src="./assets/images/collection-img2.jpg" alt="collection-img2.jpg">
 														</a>
 														<a class="hover-img" href="#">
-															<img class="card_hover_img" src="./assets/images/category-img2.jpg"
-																alt="category-img2.jpg">
+															<img class="card_hover_img" src="./assets/images/collection-img3.jpg"
+																alt="collection-img3.jpg">
 														</a>
 													</div>
 													<div class="card-btn">
@@ -484,10 +481,10 @@
 													</div>
 												</div>
 												<div class="card-content">
-													<a href="#" class="card-title">Diagram's Premium Hoodie | Snow Drift (DH-05)</a>
+													<a href="#" class="card-title">POTISSE GEOMETRIC & GRAFFITI WHITE T-SHIRT</a>
 													<div class="card-price-wrap">
-														<p class="latest-price"><strong>1199 BDT</strong></p>
-														<p class="previous-price">1400 BDT</p>
+														<p class="latest-price"><strong>€99</strong></p>
+														<p class="previous-price">€199</p>
 													</div>
 												</div>
 											</div>
@@ -499,15 +496,14 @@
 												<div class="card-image-wrap">
 													<div class="card-img">
 														<a class="main-img" href="#">
-															<img class="card_img" src="./assets/images/category-img3.jpg" alt="category-img3.jpg">
+															<img class="card_img" src="./assets/images/collection-img3.jpg" alt="collection-img3.jpg">
 														</a>
 														<a class="hover-img" href="#">
-															<img class="card_hover_img" src="./assets/images/category-img4.jpg"
-																alt="category-img4.jpg">
+															<img class="card_hover_img" src="./assets/images/collection-img1.jpg" alt="collection-img1.jpg">
 														</a>
 													</div>
 													<span class="card-badge">
-														sold out
+														New
 													</span>
 													<div class="card-btn">
 														<a href="#" class="btn primary-btn"><i class="fa-solid fa-bag-shopping"></i> add to
@@ -515,107 +511,16 @@
 													</div>
 												</div>
 												<div class="card-content">
-													<a href="#" class="card-title">Diagram's Premium Hoodie | Snow Drift (DH-05)</a>
+													<a href="#" class="card-title">POTISSE LOVE KISS POTISSE 50430 CHALK WHITE T-SHIRT</a>
 													<div class="card-price-wrap">
-														<p class="latest-price"><strong>1199 BDT</strong></p>
-														<p class="previous-price">1400 BDT</p>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="swiper-slide">
-										<div class="side-cartd-product-item">
-											<div class="product-card card_hover">
-												<div class="card-image-wrap">
-													<div class="card-img">
-														<a class="main-img" href="#">
-															<img class="card_img" src="./assets/images/category-img5.jpg" alt="category-img5.jpg">
-														</a>
-														<a class="hover-img" href="#">
-															<img class="card_hover_img" src="./assets/images/category-img6.jpg"
-																alt="category-img6.jpg">
-														</a>
-													</div>
-													<span class="card-badge">
-														in stock
-													</span>
-													<div class="card-btn">
-														<a href="#" class="btn primary-btn"><i class="fa-solid fa-bag-shopping"></i> add to
-															bag<span></span></a>
-													</div>
-												</div>
-												<div class="card-content">
-													<a href="#" class="card-title">Diagram's Premium Hoodie | Snow Drift (DH-05)</a>
-													<div class="card-price-wrap">
-														<p class="latest-price"><strong>1199 BDT</strong></p>
-														<p class="previous-price">1400 BDT</p>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="swiper-slide">
-										<div class="side-cart-product-item">
-											<div class="product-card card_hover">
-												<div class="card-image-wrap">
-													<div class="card-img">
-														<a class="main-img" href="#">
-															<img class="card_img" src="./assets/images/category-img2.jpg" alt="category-img2.jpg">
-														</a>
-														<a class="hover-img" href="#">
-															<img class="card_hover_img" src="./assets/images/category-img1.jpg"
-																alt="category-img1.jpg">
-														</a>
-													</div>
-													<div class="card-btn">
-														<a href="#" class="btn primary-btn"><i class="fa-solid fa-bag-shopping"></i> add to
-															bag<span></span></a>
-													</div>
-												</div>
-												<div class="card-content">
-													<a href="#" class="card-title">Diagram's Premium Hoodie | Snow Drift (DH-05)</a>
-													<div class="card-price-wrap">
-														<p class="latest-price"><strong>1199 BDT</strong></p>
-														<p class="previous-price">1400 BDT</p>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="swiper-slide">
-										<div class="side-cart-product-item">
-											<div class="product-card card_hover">
-												<div class="card-image-wrap">
-													<div class="card-img">
-														<a class="main-img" href="#">
-															<img class="card_img" src="./assets/images/category-img4.jpg" alt="category-img4.jpg">
-														</a>
-														<a class="hover-img" href="#">
-															<img class="card_hover_img" src="./assets/images/category-img3.jpg"
-																alt="category-img3.jpg">
-														</a>
-													</div>
-													<span class="card-badge">
-														20% off
-													</span>
-													<div class="card-btn">
-														<a href="#" class="btn primary-btn"><i class="fa-solid fa-bag-shopping"></i> add to
-															bag<span></span></a>
-													</div>
-												</div>
-												<div class="card-content">
-													<a href="#" class="card-title">Diagram's Premium Hoodie | Snow Drift (DH-05)</a>
-													<div class="card-price-wrap">
-														<p class="latest-price"><strong>1199 BDT</strong></p>
-														<p class="previous-price">1400 BDT</p>
+														<p class="latest-price"><strong>€29</strong></p>
+														<p class="previous-price">€49</p>
 													</div>
 												</div>
 											</div>
 										</div>
 									</div>
 								</div>
-								<div class="swiper-pagination"></div>
 							</div>
 							<a href="#" class="btn primary-btn">Continue Shopping <span></span></a>
 						</div>
@@ -634,10 +539,10 @@
 										<td>
 											<div class="cart-product-details">
 												<a href="#" class="cart-product-img">
-													<img src="./assets/images/category-img1.jpg" alt="category-img1.jpg">
+													<img src="./assets/images/collection-img1.jpg" alt="collection-img1.jpg">
 												</a>
 												<div class="cart-product-content">
-													<a href="#" class="cart-product-title">Polo Shirt | Pastel Latte (PD-27)</a>
+													<a href="#" class="cart-product-title">POTISSE LOVE KISS POTISSE 50430 CHALK WHITE T-SHIRT</a>
 													<div class="cart-product-varient">
 														<span>Size-M</span>
 														<span>Color-Black</span>
@@ -655,7 +560,7 @@
 										</td>
 										<td>
 											<div class="cart-product-price">
-												<p>1199 BDT</p>
+												<p>€29</p>
 											</div>
 										</td>
 									</tr>
@@ -663,10 +568,10 @@
 										<td>
 											<div class="cart-product-details">
 												<a href="#" class="cart-product-img">
-													<img src="./assets/images/category-img1.jpg" alt="category-img1.jpg">
+													<img src="./assets/images/collection-img2.jpg" alt="collection-img2.jpg">
 												</a>
 												<div class="cart-product-content">
-													<a href="#" class="cart-product-title">Polo Shirt | Pastel Latte (PD-27)</a>
+													<a href="#" class="cart-product-title">POTISSE GEOMETRIC & GRAFFITI WHITE T-SHIRT</a>
 													<div class="cart-product-varient">
 														<span>Size-M</span>
 														<span>Color-Black</span>
@@ -684,7 +589,7 @@
 										</td>
 										<td>
 											<div class="cart-product-price">
-												<p>1199 BDT</p>
+												<p>€99</p>
 											</div>
 										</td>
 									</tr>
@@ -705,44 +610,45 @@
 						</div>
 					</div>
 				</div>
-			</div> -->
+			</div>
 			<!-- cart-sidebar end -->
 		</main>
 
 		<!-- footer section start -->
-		<!-- <footer class="footer-section">
+		<footer class="footer-section">
 			<div class="container">
 				<div class="footer-items">
 					<div class="footer-item">
-						<div class="footer-logo">
-							<a href="#">
-								<img src="./assets/images/footer-brand-logo.png" alt="footer-brand-logo.png">
-							</a>
-						</div>
-						<p class="footer-text">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, temporibus voluptatibus! Dicta
-							optio totam
-							pariatur quod accusamus.
-						</p>
-					</div>
-					<div class="footer-item">
-						<h6 class="footer-item-title">About Us</h6>
+						<h6 class="footer-item-title">CUSTOMER SERVICE</h6>
 						<ul class="footer-list">
-							<li><a href="#">home</a></li>
-							<li><a href="#">about</a></li>
-							<li><a href="#">contact</a></li>
-							<li><a href="#">collections</a></li>
-							<li><a href="#">products</a></li>
+							<li><a href="#">Payment</a></li>
+							<li><a href="#">Shipping & Returns</a></li>
+							<li><a href="#">Contact</a></li>
+							<li><a href="#">About POTISSE</a></li>
 						</ul>
 					</div>
 					<div class="footer-item">
-						<h6 class="footer-item-title">Quick links</h6>
+						<h6 class="footer-item-title">FOLLOW POTISSE</h6>
 						<ul class="footer-list">
-							<li><a href="#">faq</a></li>
-							<li><a href="#">terms & conditions</a></li>
-							<li><a href="#">privacy policy</a></li>
-							<li><a href="#">Shipping & Returns</a></li>
-							<li><a href="#">blog</a></li>
+							<li><a href="#">Instragram</a></li>
+							<li><a href="#">Youtube</a></li>
+							<li><a href="#">Pinterest</a></li>
+							<li><a href="#">Facebook</a></li>
+						</ul>
+					</div>
+					<div class="footer-item footer-logo-item">
+						<div class="footer-logo">
+							<a href="#">
+								<img src="./assets/images/footer-logo.png" alt="footer-logo.png">
+							</a>
+						</div>
+					</div>
+					<div class="footer-item">
+						<h6 class="footer-item-title">LEGAL</h6>
+						<ul class="footer-list">
+							<li><a href="#">Terms & Conditions</a></li>
+							<li><a href="#">Privacy Policy</a></li>
+							<li><a href="#">Cookies Preferences</a></li>
 						</ul>
 					</div>
 					<div class="footer-item">
@@ -780,22 +686,16 @@
 			<div class="copyright-area">
 				<div class="container">
 					<div class="copyright-content">
-						<p class="copyright-text">&copy; Copyright Reserved to Diagram & made by <a
-								href="https://qualixe.com/"><strong>qualixe</strong></a>.</p>
-						<div class="copyright-img">
-							<img src="./assets/images/copyright-img1.png" alt="copyright-img1.png">
-							<img src="./assets/images/copyright-img2.png" alt="copyright-img2.png">
-						</div>
+						<p class="copyright-text">&copy; 2025 <a href="https://qualixe.com/"><strong>POTISSE</strong></a></p>
 					</div>
 				</div>
 			</div>
-		</footer> -->
+		</footer>
 		<!-- footer section end -->
 
 		<!-- js link start-->
 		<script src="./assets/js/jquery-3.7.1.min.js"></script>
 		<script src="./assets/js/swiper-bundle.min.js"></script>
-		<script src="./assets/js/jquery.nicescroll.min.js"></script>
 		<script src="./assets/js/wow.min.js"></script>
 		<script src="./assets/js/script.js"></script>
 		<!-- js link end-->
