navbar height, footer-copyright border, common page banner, collection filter, product section, size guide fixed

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 										<a href="collections.html">Collections</a>
 									</li>
 									<li>
-										<a href="#">Product</a>
+										<a href="product.html">Product</a>
 									</li>
 									<li>
 										<a href="#">Contact</a>
@@ -171,7 +171,7 @@
 			<!-- navbar section css end -->
 		</header>
 
-		<main>
+		<main class="page-content">
 			<!-- banner section start -->
 			<section class="hero-section">
 				<div class="hero-content-wrapper">
@@ -499,7 +499,8 @@
 															<img class="card_img" src="./assets/images/collection-img3.jpg" alt="collection-img3.jpg">
 														</a>
 														<a class="hover-img" href="#">
-															<img class="card_hover_img" src="./assets/images/collection-img1.jpg" alt="collection-img1.jpg">
+															<img class="card_hover_img" src="./assets/images/collection-img1.jpg"
+																alt="collection-img1.jpg">
 														</a>
 													</div>
 													<span class="card-badge">
@@ -527,7 +528,7 @@
 					</div>
 					<div class="side-cart-product-content">
 						<div class="side-cart-progress-bar-area">
-							<p class="side-cart-progress-bar-text">Add another <strong>1500 Tk</strong> to take advantage of Free
+							<p class="side-cart-progress-bar-text">Add another <strong>€19</strong> to take advantage of Free
 								Delivery.
 							</p>
 							<input type="range" value="60" min="0" max="100" step="1" class="progress">
@@ -599,7 +600,7 @@
 						<div class="side-cart-product-content-footer">
 							<div class="side-cart-product-price-wrap">
 								<p>Subtotal</p>
-								<p>2398 tk</p>
+								<p>€299</p>
 							</div>
 							<div class="side-cart-checkout-btn">
 								<a href="#" class="btn primary-btn">checkout <span></span></a>
