--- a/collections.html
+++ b/collections.html
@@ -11,7 +11,6 @@
 		<link rel="stylesheet" href="./assets/css/animate.min.css">
 		<link rel="stylesheet" href="./assets/css/common-banner.css">
 		<link rel="stylesheet" href="./assets/css/pagination.css">
-		<link rel="stylesheet" href="./assets/css/breadcrumbs.css">
 		<link rel="stylesheet" href="./assets/css/cart.css">
 		<link rel="stylesheet" href="./assets/css/card.css">
 		<link rel="stylesheet" href="./assets/css/collections.css">
@@ -60,7 +59,7 @@
 										<a href="collections.html">Collections</a>
 									</li>
 									<li>
-										<a href="#">Product</a>
+										<a href="product.html">Product</a>
 									</li>
 									<li>
 										<a href="#">Contact</a>
@@ -171,23 +170,26 @@
 
 		<main>
 			<!-- banner section start -->
-			<section class="common-banner collection-page-banner">
+			<section class="common-banner">
 				<div class="container">
-					<div class="common-banner-content">
-						<div class="section-heading-wrapper">
-							<h2 class="section-heading wow animate__ animate__fadeInUp animated" data-wow-duration="1s"
-								data-wow-delay=".1s">Collections</h2>
-								<P class="section-heading-text">"CORE is clarity in design — bold lines, repeated forms, quiet intention.
-								</P>
-								<P class="section-heading-text">Each piece reflects a visual language built on balance, rhythm, and identity.
-								</P>
-							<ul class="breadcrumb wow animate__ animate__fadeInUp animated" data-wow-duration="1s"
-								data-wow-delay=".5s">
-								<li><a href="index.html">Home</a> <span class="breadcrumb-icon"><i
-											class="fa-solid fa-angle-right"></i></span>
-								</li>
-								<li><span class="active">Collections</span> <span class="breadcrumb-icon"></span></li>
-							</ul>
+					<div class="common-banner-content-wrap">
+						<h2 class="common-banner-title-top">core</h2>
+						<div class="common-banner-content">
+							<h2 class="common-banner-title-bottom">collection</h2>
+							<div class="common-banner-content-inner">
+								<p class="common-banner-content-inner-text">
+									"CORE is clarity in design — bold lines, repeated forms, quiet intention.
+								</p>
+								<p class="common-banner-content-inner-text">
+									Each piece reflects a visual language built on balance, rhythm, and identity.
+								</p>
+								<p class="common-banner-content-inner-text">
+									Geometry becomes expression, and simplicity becomes strength."
+								</p>
+							</div>
+						</div>
+						<div class="common-banner-img">
+							<img src="./assets/images/common-banner-img1.jpg" alt="common-banner-img1.jpg">
 						</div>
 					</div>
 				</div>
@@ -197,12 +199,14 @@
 			<!-- collection section start -->
 			<section class="section collection-section">
 				<div class="container">
+					<div class="collection-heading-wrapper">
+						<p class="collection-heading-title">T-SHIRTS</p>
+					</div>
 					<div class="collection-wrapper">
 						<div class="collection-filter">
-							<h6 class="filter-sidebar-heading">Filter</h6>
 							<span class="filter-window-close-btn"></span>
 							<div class="filter-box">
-								<h6 class="filter-sidebar-heading mobile-filter-heading">Filter <span class="filter-close-btn"><i
+								<h6 class="filter-sidebar-heading">Filter <span class="filter-close-btn"><i
 											class="fa-solid fa-xmark"></i></span>
 								</h6>
 								<div class="filter-accordion">
@@ -320,17 +324,8 @@
 							<div class="collection-top">
 								<div class="collection-filter-btn">
 									<span class="filter-open-btn"><i class="fa-solid fa-filter"></i>Filter</span>
-									<p class="collection-product-count">7 products</p>
 								</div>
-								<div class="filter-select-field">
-									<select name="sort_by" id="sort_by">
-										<option value="best_selling">Best selling</option>
-										<option value="featured">Featured</option>
-									</select>
-									<span class="filter-select-field-icon">
-										<i class="fa-solid fa-angle-down"></i>
-									</span>
-								</div>
+								<p class="collection-product-count">7 Items</p>
 							</div>
 							<div class="product-items">
 								<div class="product-item">
@@ -396,7 +391,8 @@
 													<img class="card_img" src="./assets/images/collection-img3.jpg" alt="collection-img3.jpg">
 												</a>
 												<a class="hover-img" href="#">
-													<img class="card_hover_img" src="./assets/images/collection-img1.jpg" alt="collection-img1.jpg">
+													<img class="card_hover_img" src="./assets/images/collection-img1.jpg"
+														alt="collection-img1.jpg">
 												</a>
 											</div>
 											<span class="card-badge">
@@ -424,7 +420,8 @@
 													<img class="card_img" src="./assets/images/collection-img3.jpg" alt="collection-img3.jpg">
 												</a>
 												<a class="hover-img" href="#">
-													<img class="card_hover_img" src="./assets/images/collection-img1.jpg" alt="collection-img1.jpg">
+													<img class="card_hover_img" src="./assets/images/collection-img1.jpg"
+														alt="collection-img1.jpg">
 												</a>
 											</div>
 											<span class="card-badge">
@@ -495,6 +492,61 @@
 											<div class="card-price-wrap">
 												<p class="latest-price"><strong>€29</strong></p>
 												<p class="previous-price">€39</p>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="product-item">
+									<div class="product-card card_hover">
+										<div class="card-image-wrap">
+											<div class="card-img">
+												<a class="main-img" href="#">
+													<img class="card_img" src="./assets/images/collection-img1.jpg" alt="collection-img1.jpg">
+												</a>
+												<a class="hover-img" href="#">
+													<img class="card_hover_img" src="./assets/images/collection-img2.jpg"
+														alt="collection-img2.jpg">
+												</a>
+											</div>
+											<span class="card-badge">
+												New
+											</span>
+											<div class="card-btn">
+												<a href="#" class="btn primary-btn"><i class="fa-solid fa-bag-shopping"></i> add to
+													bag<span></span></a>
+											</div>
+										</div>
+										<div class="card-content">
+											<a href="#" class="card-title">POTISSE LOVE KISS POTISSE 50430 CHALK WHITE T-SHIRT</a>
+											<div class="card-price-wrap">
+												<p class="latest-price"><strong>€29</strong></p>
+												<p class="previous-price">€39</p>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="product-item">
+									<div class="product-card card_hover">
+										<div class="card-image-wrap">
+											<div class="card-img">
+												<a class="main-img" href="#">
+													<img class="card_img" src="./assets/images/collection-img2.jpg" alt="collection-img2.jpg">
+												</a>
+												<a class="hover-img" href="#">
+													<img class="card_hover_img" src="./assets/images/collection-img3.jpg"
+														alt="collection-img3.jpg">
+												</a>
+											</div>
+											<div class="card-btn">
+												<a href="#" class="btn primary-btn"><i class="fa-solid fa-bag-shopping"></i> add to
+													bag<span></span></a>
+											</div>
+										</div>
+										<div class="card-content">
+											<a href="#" class="card-title">POTISSE GEOMETRIC & GRAFFITI WHITE T-SHIRT</a>
+											<div class="card-price-wrap">
+												<p class="latest-price"><strong>€99</strong></p>
+												<p class="previous-price">€199</p>
 											</div>
 										</div>
 									</div>
@@ -640,7 +692,7 @@
 					</div>
 					<div class="side-cart-product-content">
 						<div class="side-cart-progress-bar-area">
-							<p class="side-cart-progress-bar-text">Add another <strong>1500 Tk</strong> to take advantage of Free
+							<p class="side-cart-progress-bar-text">Add another <strong>€19</strong> to take advantage of Free
 								Delivery.
 							</p>
 							<input type="range" value="60" min="0" max="100" step="1" class="progress">
@@ -712,7 +764,7 @@
 						<div class="side-cart-product-content-footer">
 							<div class="side-cart-product-price-wrap">
 								<p>Subtotal</p>
-								<p>2398 tk</p>
+								<p>€299</p>
 							</div>
 							<div class="side-cart-checkout-btn">
 								<a href="#" class="btn primary-btn">checkout <span></span></a>
