product section fixed, common banner section added, common headiing section added, cart page added, cart sidebar fixed

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 													<a href="#">About us</a>
 												</li>
 												<li>
-													<a href="#">Cart</a>
+													<a href="cart.html">Cart</a>
 												</li>
 												<li>
 													<a href="#">Blog</a>
@@ -534,68 +534,104 @@
 							<input type="range" value="60" min="0" max="100" step="1" class="progress">
 						</div>
 						<div class="side-cart-product-item-wrapper">
-							<table class="cart-product-table">
-								<tbody>
-									<tr>
-										<td>
-											<div class="cart-product-details">
-												<a href="#" class="cart-product-img">
-													<img src="./assets/images/collection-img1.jpg" alt="collection-img1.jpg">
-												</a>
-												<div class="cart-product-content">
-													<a href="#" class="cart-product-title">POTISSE LOVE KISS POTISSE 50430 CHALK WHITE T-SHIRT</a>
-													<div class="cart-product-varient">
-														<span>Size-M</span>
-														<span>Color-Black</span>
-													</div>
-													<div class="cart-product-quantity-wrap mobile-cart-quantity">
-														<div class="product-quantity">
-															<button type="button" class="quantity-decrease"><i class="fa-solid fa-minus"></i></button>
-															<input type="number" value="1" class="quantity-total">
-															<button type="button" class="quantity-increase"><i class="fa-solid fa-plus"></i></button>
-														</div>
-														<button class="cart-product-remove-btn"><i class="fa-solid fa-trash"></i></button>
-													</div>
+							<div class="cart-product-items">
+								<div class="cart-product-item">
+									<div class="cart-product-item-img">
+										<img src="./assets/images/collection-img1.jpg" alt="collection-img1.jpg">
+									</div>
+									<div class="cart-product-item-content">
+										<p class="cart-product-item-content-title">
+											POTISSE LOVE KISS POTISSE CHALK</p>
+										<ul>
+											<li>
+												<p>color:</p>
+												<p>black</p>
+											</li>
+											<li>
+												<p>size:</p>
+												<p>large</p>
+											</li>
+											<li>
+												<p>price:</p>
+												<p>€39</p>
+											</li>
+											<li>
+												<p>quantity:</p>
+												<div class="product-quantity">
+													<button type="button" class="quantity-decrease"><i class="fa-solid fa-minus"></i></button>
+													<input type="number" value="1" class="quantity-total">
+													<button type="button" class="quantity-increase"><i class="fa-solid fa-plus"></i></button>
 												</div>
-											</div>
-										</td>
-										<td>
-											<div class="cart-product-price">
-												<p>€29</p>
-											</div>
-										</td>
-									</tr>
-									<tr>
-										<td>
-											<div class="cart-product-details">
-												<a href="#" class="cart-product-img">
-													<img src="./assets/images/collection-img2.jpg" alt="collection-img2.jpg">
-												</a>
-												<div class="cart-product-content">
-													<a href="#" class="cart-product-title">POTISSE GEOMETRIC & GRAFFITI WHITE T-SHIRT</a>
-													<div class="cart-product-varient">
-														<span>Size-M</span>
-														<span>Color-Black</span>
-													</div>
-													<div class="cart-product-quantity-wrap mobile-cart-quantity">
-														<div class="product-quantity">
-															<button type="button" class="quantity-decrease"><i class="fa-solid fa-minus"></i></button>
-															<input type="number" value="1" class="quantity-total">
-															<button type="button" class="quantity-increase"><i class="fa-solid fa-plus"></i></button>
-														</div>
-														<button class="cart-product-remove-btn"><i class="fa-solid fa-trash"></i></button>
-													</div>
+												<button class="cart-item-remove-btn">remove</button>
+											</li>
+										</ul>
+									</div>
+								</div>
+								<div class="cart-product-item">
+									<div class="cart-product-item-img">
+										<img src="./assets/images/collection-img1.jpg" alt="collection-img1.jpg">
+									</div>
+									<div class="cart-product-item-content">
+										<p class="cart-product-item-content-title">
+											POTISSE LOVE KISS POTISSE CHALK</p>
+										<ul>
+											<li>
+												<p>color:</p>
+												<p>black</p>
+											</li>
+											<li>
+												<p>size:</p>
+												<p>large</p>
+											</li>
+											<li>
+												<p>price:</p>
+												<p>€39</p>
+											</li>
+											<li>
+												<p>quantity:</p>
+												<div class="product-quantity">
+													<button type="button" class="quantity-decrease"><i class="fa-solid fa-minus"></i></button>
+													<input type="number" value="1" class="quantity-total">
+													<button type="button" class="quantity-increase"><i class="fa-solid fa-plus"></i></button>
 												</div>
-											</div>
-										</td>
-										<td>
-											<div class="cart-product-price">
-												<p>€99</p>
-											</div>
-										</td>
-									</tr>
-								</tbody>
-							</table>
+												<button class="cart-item-remove-btn">remove</button>
+											</li>
+										</ul>
+									</div>
+								</div>
+								<div class="cart-product-item">
+									<div class="cart-product-item-img">
+										<img src="./assets/images/collection-img1.jpg" alt="collection-img1.jpg">
+									</div>
+									<div class="cart-product-item-content">
+										<p class="cart-product-item-content-title">
+											POTISSE LOVE KISS POTISSE CHALK</p>
+										<ul>
+											<li>
+												<p>color:</p>
+												<p>black</p>
+											</li>
+											<li>
+												<p>size:</p>
+												<p>large</p>
+											</li>
+											<li>
+												<p>price:</p>
+												<p>€39</p>
+											</li>
+											<li>
+												<p>quantity:</p>
+												<div class="product-quantity">
+													<button type="button" class="quantity-decrease"><i class="fa-solid fa-minus"></i></button>
+													<input type="number" value="1" class="quantity-total">
+													<button type="button" class="quantity-increase"><i class="fa-solid fa-plus"></i></button>
+												</div>
+												<button class="cart-item-remove-btn">remove</button>
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
 						</div>
 						<div class="side-cart-product-content-footer">
 							<div class="side-cart-product-price-wrap">
