--- a/collections.html
+++ b/collections.html
@@ -73,7 +73,7 @@
 													<a href="#">About us</a>
 												</li>
 												<li>
-													<a href="#">Cart</a>
+													<a href="cart.html">Cart</a>
 												</li>
 												<li>
 													<a href="#">Blog</a>
@@ -569,214 +569,250 @@
 			</section>
 			<!-- collection section end -->
 
-			<!-- cart-sidebar start -->
-			<div class="cart-sidebar">
-				<button class="cart-sidebar-close-window-btn"></button>
-				<div class="cart-sidebar-box active">
-					<div class="side-cart-top">
-						<p class="side-cart-heading">YOUR CART</p>
-						<div class="side-cart-heading-icon-wrap">
-							<span class="icon">
-								<i class="fa-solid fa-bag-shopping"></i>
-							</span>
-							<span class="side-cart-item-number">0</span>
-						</div>
-						<button title="close" class="side-cart-close-btn">
-							<i class="fa-solid fa-xmark"></i>
-						</button>
-					</div>
-					<div class="side-cart-empty">
-						<div class="side-cart-empty-text">
-							<h3>
-								Your Cart Is Empty
-							</h3>
-						</div>
-						<div class="side-cart-slider-wrapper">
-							<h4 class="side-cart-slider-title">You may also like</h4>
-							<div class="swiper side-cart-slider">
-								<div class="swiper-wrapper">
-									<div class="swiper-slide">
-										<div class="side-cart-product-item">
-											<div class="product-card card_hover">
-												<div class="card-image-wrap">
-													<div class="card-img">
-														<a class="main-img" href="#">
-															<img class="card_img" src="./assets/images/collection-img1.jpg" alt="collection-img1.jpg">
-														</a>
-														<a class="hover-img" href="#">
-															<img class="card_hover_img" src="./assets/images/collection-img2.jpg"
-																alt="collection-img2.jpg">
-														</a>
-													</div>
-													<span class="card-badge">
-														New
-													</span>
-													<div class="card-btn">
-														<a href="#" class="btn primary-btn"><i class="fa-solid fa-bag-shopping"></i> add to
-															bag<span></span></a>
+						<!-- cart-sidebar start -->
+						<div class="cart-sidebar">
+							<button class="cart-sidebar-close-window-btn"></button>
+							<div class="cart-sidebar-box active">
+								<div class="side-cart-top">
+									<p class="side-cart-heading">YOUR CART</p>
+									<div class="side-cart-heading-icon-wrap">
+										<span class="icon">
+											<i class="fa-solid fa-bag-shopping"></i>
+										</span>
+										<span class="side-cart-item-number">0</span>
+									</div>
+									<button title="close" class="side-cart-close-btn">
+										<i class="fa-solid fa-xmark"></i>
+									</button>
+								</div>
+								<div class="side-cart-empty">
+									<div class="side-cart-empty-text">
+										<h3>
+											Your Cart Is Empty
+										</h3>
+									</div>
+									<div class="side-cart-slider-wrapper">
+										<h4 class="side-cart-slider-title">You may also like</h4>
+										<div class="swiper side-cart-slider">
+											<div class="swiper-wrapper">
+												<div class="swiper-slide">
+													<div class="side-cart-product-item">
+														<div class="product-card card_hover">
+															<div class="card-image-wrap">
+																<div class="card-img">
+																	<a class="main-img" href="#">
+																		<img class="card_img" src="./assets/images/collection-img1.jpg" alt="collection-img1.jpg">
+																	</a>
+																	<a class="hover-img" href="#">
+																		<img class="card_hover_img" src="./assets/images/collection-img2.jpg"
+																			alt="collection-img2.jpg">
+																	</a>
+																</div>
+																<span class="card-badge">
+																	New
+																</span>
+																<div class="card-btn">
+																	<a href="#" class="btn primary-btn"><i class="fa-solid fa-bag-shopping"></i> add to
+																		bag<span></span></a>
+																</div>
+															</div>
+															<div class="card-content">
+																<a href="#" class="card-title">POTISSE LOVE KISS POTISSE 50430 CHALK WHITE T-SHIRT</a>
+																<div class="card-price-wrap">
+																	<p class="latest-price"><strong>€29</strong></p>
+																	<p class="previous-price">€39</p>
+																</div>
+															</div>
+														</div>
 													</div>
 												</div>
-												<div class="card-content">
-													<a href="#" class="card-title">POTISSE LOVE KISS POTISSE 50430 CHALK WHITE T-SHIRT</a>
-													<div class="card-price-wrap">
-														<p class="latest-price"><strong>€29</strong></p>
-														<p class="previous-price">€39</p>
+												<div class="swiper-slide">
+													<div class="side-cart-product-item">
+														<div class="product-card card_hover">
+															<div class="card-image-wrap">
+																<div class="card-img">
+																	<a class="main-img" href="#">
+																		<img class="card_img" src="./assets/images/collection-img2.jpg" alt="collection-img2.jpg">
+																	</a>
+																	<a class="hover-img" href="#">
+																		<img class="card_hover_img" src="./assets/images/collection-img3.jpg"
+																			alt="collection-img3.jpg">
+																	</a>
+																</div>
+																<div class="card-btn">
+																	<a href="#" class="btn primary-btn"><i class="fa-solid fa-bag-shopping"></i> add to
+																		bag<span></span></a>
+																</div>
+															</div>
+															<div class="card-content">
+																<a href="#" class="card-title">POTISSE GEOMETRIC & GRAFFITI WHITE T-SHIRT</a>
+																<div class="card-price-wrap">
+																	<p class="latest-price"><strong>€99</strong></p>
+																	<p class="previous-price">€199</p>
+																</div>
+															</div>
+														</div>
 													</div>
+												</div>
+												<div class="swiper-slide">
+													<div class="side-cart-product-item">
+														<div class="product-card card_hover">
+															<div class="card-image-wrap">
+																<div class="card-img">
+																	<a class="main-img" href="#">
+																		<img class="card_img" src="./assets/images/collection-img3.jpg" alt="collection-img3.jpg">
+																	</a>
+																	<a class="hover-img" href="#">
+																		<img class="card_hover_img" src="./assets/images/collection-img1.jpg"
+																			alt="collection-img1.jpg">
+																	</a>
+																</div>
+																<span class="card-badge">
+																	New
+																</span>
+																<div class="card-btn">
+																	<a href="#" class="btn primary-btn"><i class="fa-solid fa-bag-shopping"></i> add to
+																		bag<span></span></a>
+																</div>
+															</div>
+															<div class="card-content">
+																<a href="#" class="card-title">POTISSE LOVE KISS POTISSE 50430 CHALK WHITE T-SHIRT</a>
+																<div class="card-price-wrap">
+																	<p class="latest-price"><strong>€29</strong></p>
+																	<p class="previous-price">€49</p>
+																</div>
+															</div>
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+										<a href="#" class="btn primary-btn">Continue Shopping <span></span></a>
+									</div>
+								</div>
+								<div class="side-cart-product-content">
+									<div class="side-cart-progress-bar-area">
+										<p class="side-cart-progress-bar-text">Add another <strong>€19</strong> to take advantage of Free
+											Delivery.
+										</p>
+										<input type="range" value="60" min="0" max="100" step="1" class="progress">
+									</div>
+									<div class="side-cart-product-item-wrapper">
+										<div class="cart-product-items">
+											<div class="cart-product-item">
+												<div class="cart-product-item-img">
+													<img src="./assets/images/collection-img1.jpg" alt="collection-img1.jpg">
+												</div>
+												<div class="cart-product-item-content">
+													<p class="cart-product-item-content-title">
+														POTISSE LOVE KISS POTISSE CHALK</p>
+													<ul>
+														<li>
+															<p>color:</p>
+															<p>black</p>
+														</li>
+														<li>
+															<p>size:</p>
+															<p>large</p>
+														</li>
+														<li>
+															<p>price:</p>
+															<p>€39</p>
+														</li>
+														<li>
+															<p>quantity:</p>
+															<div class="product-quantity">
+																<button type="button" class="quantity-decrease"><i class="fa-solid fa-minus"></i></button>
+																<input type="number" value="1" class="quantity-total">
+																<button type="button" class="quantity-increase"><i class="fa-solid fa-plus"></i></button>
+															</div>
+															<button class="cart-item-remove-btn">remove</button>
+														</li>
+													</ul>
+												</div>
+											</div>
+											<div class="cart-product-item">
+												<div class="cart-product-item-img">
+													<img src="./assets/images/collection-img1.jpg" alt="collection-img1.jpg">
+												</div>
+												<div class="cart-product-item-content">
+													<p class="cart-product-item-content-title">
+														POTISSE LOVE KISS POTISSE CHALK</p>
+													<ul>
+														<li>
+															<p>color:</p>
+															<p>black</p>
+														</li>
+														<li>
+															<p>size:</p>
+															<p>large</p>
+														</li>
+														<li>
+															<p>price:</p>
+															<p>€39</p>
+														</li>
+														<li>
+															<p>quantity:</p>
+															<div class="product-quantity">
+																<button type="button" class="quantity-decrease"><i class="fa-solid fa-minus"></i></button>
+																<input type="number" value="1" class="quantity-total">
+																<button type="button" class="quantity-increase"><i class="fa-solid fa-plus"></i></button>
+															</div>
+															<button class="cart-item-remove-btn">remove</button>
+														</li>
+													</ul>
+												</div>
+											</div>
+											<div class="cart-product-item">
+												<div class="cart-product-item-img">
+													<img src="./assets/images/collection-img1.jpg" alt="collection-img1.jpg">
+												</div>
+												<div class="cart-product-item-content">
+													<p class="cart-product-item-content-title">
+														POTISSE LOVE KISS POTISSE CHALK</p>
+													<ul>
+														<li>
+															<p>color:</p>
+															<p>black</p>
+														</li>
+														<li>
+															<p>size:</p>
+															<p>large</p>
+														</li>
+														<li>
+															<p>price:</p>
+															<p>€39</p>
+														</li>
+														<li>
+															<p>quantity:</p>
+															<div class="product-quantity">
+																<button type="button" class="quantity-decrease"><i class="fa-solid fa-minus"></i></button>
+																<input type="number" value="1" class="quantity-total">
+																<button type="button" class="quantity-increase"><i class="fa-solid fa-plus"></i></button>
+															</div>
+															<button class="cart-item-remove-btn">remove</button>
+														</li>
+													</ul>
 												</div>
 											</div>
 										</div>
 									</div>
-									<div class="swiper-slide">
-										<div class="side-cart-product-item">
-											<div class="product-card card_hover">
-												<div class="card-image-wrap">
-													<div class="card-img">
-														<a class="main-img" href="#">
-															<img class="card_img" src="./assets/images/collection-img2.jpg" alt="collection-img2.jpg">
-														</a>
-														<a class="hover-img" href="#">
-															<img class="card_hover_img" src="./assets/images/collection-img3.jpg"
-																alt="collection-img3.jpg">
-														</a>
-													</div>
-													<div class="card-btn">
-														<a href="#" class="btn primary-btn"><i class="fa-solid fa-bag-shopping"></i> add to
-															bag<span></span></a>
-													</div>
-												</div>
-												<div class="card-content">
-													<a href="#" class="card-title">POTISSE GEOMETRIC & GRAFFITI WHITE T-SHIRT</a>
-													<div class="card-price-wrap">
-														<p class="latest-price"><strong>€99</strong></p>
-														<p class="previous-price">€199</p>
-													</div>
-												</div>
-											</div>
+									<div class="side-cart-product-content-footer">
+										<div class="side-cart-product-price-wrap">
+											<p>Subtotal</p>
+											<p>€299</p>
 										</div>
-									</div>
-									<div class="swiper-slide">
-										<div class="side-cart-product-item">
-											<div class="product-card card_hover">
-												<div class="card-image-wrap">
-													<div class="card-img">
-														<a class="main-img" href="#">
-															<img class="card_img" src="./assets/images/collection-img3.jpg" alt="collection-img3.jpg">
-														</a>
-														<a class="hover-img" href="#">
-															<img class="card_hover_img" src="./assets/images/collection-img1.jpg"
-																alt="collection-img1.jpg">
-														</a>
-													</div>
-													<span class="card-badge">
-														New
-													</span>
-													<div class="card-btn">
-														<a href="#" class="btn primary-btn"><i class="fa-solid fa-bag-shopping"></i> add to
-															bag<span></span></a>
-													</div>
-												</div>
-												<div class="card-content">
-													<a href="#" class="card-title">POTISSE LOVE KISS POTISSE 50430 CHALK WHITE T-SHIRT</a>
-													<div class="card-price-wrap">
-														<p class="latest-price"><strong>€29</strong></p>
-														<p class="previous-price">€49</p>
-													</div>
-												</div>
-											</div>
+										<div class="side-cart-checkout-btn">
+											<a href="#" class="btn primary-btn">checkout <span></span></a>
 										</div>
+										<p class="side-cart-checkout-text">
+											Shipping, taxes, and discount codes calculated at checkout.
+										</p>
 									</div>
 								</div>
 							</div>
-							<a href="#" class="btn primary-btn">Continue Shopping <span></span></a>
 						</div>
-					</div>
-					<div class="side-cart-product-content">
-						<div class="side-cart-progress-bar-area">
-							<p class="side-cart-progress-bar-text">Add another <strong>€19</strong> to take advantage of Free
-								Delivery.
-							</p>
-							<input type="range" value="60" min="0" max="100" step="1" class="progress">
-						</div>
-						<div class="side-cart-product-item-wrapper">
-							<table class="cart-product-table">
-								<tbody>
-									<tr>
-										<td>
-											<div class="cart-product-details">
-												<a href="#" class="cart-product-img">
-													<img src="./assets/images/collection-img1.jpg" alt="collection-img1.jpg">
-												</a>
-												<div class="cart-product-content">
-													<a href="#" class="cart-product-title">POTISSE LOVE KISS POTISSE 50430 CHALK WHITE T-SHIRT</a>
-													<div class="cart-product-varient">
-														<span>Size-M</span>
-														<span>Color-Black</span>
-													</div>
-													<div class="cart-product-quantity-wrap mobile-cart-quantity">
-														<div class="product-quantity">
-															<button type="button" class="quantity-decrease"><i class="fa-solid fa-minus"></i></button>
-															<input type="number" value="1" class="quantity-total">
-															<button type="button" class="quantity-increase"><i class="fa-solid fa-plus"></i></button>
-														</div>
-														<button class="cart-product-remove-btn"><i class="fa-solid fa-trash"></i></button>
-													</div>
-												</div>
-											</div>
-										</td>
-										<td>
-											<div class="cart-product-price">
-												<p>€29</p>
-											</div>
-										</td>
-									</tr>
-									<tr>
-										<td>
-											<div class="cart-product-details">
-												<a href="#" class="cart-product-img">
-													<img src="./assets/images/collection-img2.jpg" alt="collection-img2.jpg">
-												</a>
-												<div class="cart-product-content">
-													<a href="#" class="cart-product-title">POTISSE GEOMETRIC & GRAFFITI WHITE T-SHIRT</a>
-													<div class="cart-product-varient">
-														<span>Size-M</span>
-														<span>Color-Black</span>
-													</div>
-													<div class="cart-product-quantity-wrap mobile-cart-quantity">
-														<div class="product-quantity">
-															<button type="button" class="quantity-decrease"><i class="fa-solid fa-minus"></i></button>
-															<input type="number" value="1" class="quantity-total">
-															<button type="button" class="quantity-increase"><i class="fa-solid fa-plus"></i></button>
-														</div>
-														<button class="cart-product-remove-btn"><i class="fa-solid fa-trash"></i></button>
-													</div>
-												</div>
-											</div>
-										</td>
-										<td>
-											<div class="cart-product-price">
-												<p>€99</p>
-											</div>
-										</td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
-						<div class="side-cart-product-content-footer">
-							<div class="side-cart-product-price-wrap">
-								<p>Subtotal</p>
-								<p>€299</p>
-							</div>
-							<div class="side-cart-checkout-btn">
-								<a href="#" class="btn primary-btn">checkout <span></span></a>
-							</div>
-							<p class="side-cart-checkout-text">
-								Shipping, taxes, and discount codes calculated at checkout.
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- cart-sidebar end -->
+						<!-- cart-sidebar end -->
 		</main>
 
 		<!-- footer section start -->
